--- a/style.css
+++ b/style.css
@@ -46,8 +46,22 @@ main {
    
     display: flex;
     gap: 4rem;
-
 }
+img {
+    transition: transform 0.3s ease;
+  }
+  
+  img:hover {
+    cursor: pointer;
+    transform: translateY(-10px);
+  }
+  
+  .img.clicked {
+    transform: translateY(-100%);
+  }
+   
+
+
 button{
     background-color: transparent;
     border: none;
@@ -74,4 +88,3 @@ margin-bottom: 12px;
 .cool {
     padding-left: 2.0em;
 }
-.
