--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@
 }
 body{
     color: #323238;
-    
+   
 }
 main {
-  
+ 
     width: 821px;
     height: 336px;
     margin-left: 23.3rem;
@@ -27,23 +27,14 @@ main {
     
     margin-bottom: 3.1rem;
         
-  
-  
     text-align: center;
-
 
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
    
-  
-   
 }
-.sounds{
-    display: block;
-}
-
 #controls {
-   
+
     width: 31.2rem;
     height: 4.8rem;
    
@@ -57,11 +48,13 @@ svg {
   
   svg:hover {
     cursor: pointer;
-    transform: translateY(-10px);
+    transform: translateY(-10px); 
+ 
   }
   
   svg.clicked {
     transform: translateY(-100%);
+   
   }
    
 
@@ -84,11 +77,11 @@ button{
   
 }
 .sons, button{
-gap: 3.2rem;
+    gap: 3.2rem;
 }
 .nuvem{
-padding-left: 2.7rem;
-margin-bottom: 12px;
+    padding-left: 2.7rem;
+    margin-bottom: 12px;
 }
 .cool {
     padding-left: 2.0em;
@@ -98,10 +91,12 @@ margin-bottom: 12px;
    position: absolute;
     top: 50px;
     right: 40px;
-}
-
-#controls svg path {
-    fill: #323238;
   
 }
-  
+path{
+    fill:#323238;
+    
+}
+.two{
+    display: none;
+ }
